testsuite/poke.pkl/try-catch-diag-2.pk
/* { dg-do compile } */

defun foo = int:
  {
   try
     raise 1;
   catch (string e)
   {
     raise e;  /* { dg-error "" } */
   }
   return 666;
  }
